--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -8,6 +8,9 @@
     "logout": "Sign Out",
     "dashboard": "Dashboard"
   },
+  "msg": {
+    "welcome": "welcome {username}"
+  },
   "button": {
     "submit": "Submit",
     "cancel": "Cancel",
