--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -23,5 +23,98 @@
     "send": "送信",
     "close": "閉じる",
     "back": "戻る"
+  },
+  "index": {
+    "hero": {
+      "mainText1": "お客様をお待たせしない",
+      "mainText2": "を実現。",
+      "subText1": "お店の新しい顧客体験を創造",
+      "subText2": "しませんか？"
+    },
+    "description": {
+      "card1": "お客様を呼びに行ったり、行列の整理に時間を取られたり…お店の運営には、見えない「待ち時間」に関する課題があります。",
+      "card2": "QRコード一つで整理券発行から呼び出しまで完結し、お客様もスタッフもストレスなく過ごせる新しい店舗体験を実現します。",
+      "card3": "私たちは、そんなお店の皆様のために、お客様の「待つ」をなくし、よりスムーズな店舗運営をサポートするWebサービスを提供しています。"
+    },
+    "merit": {
+      "title": "「Qパス」を導入することで、お店とお客様、双方に嬉しい変化が生まれます。",
+      "staff": {
+        "title": "スタッフの負担を大幅軽減",
+        "descriptions": [{"title": "業務効率の向上", "value": "お客様の呼び出しは、ボタン一つで完了。スタッフがいちいち呼びに行ったり、列の整理に張り付いたりする手間がなくなります。その分、本来の接客や調理、商品準備など、売上に直結する業務に集中できます。"}, {"title": "スムーズなオペレーション", "value": "混雑時でも混乱なくお客様を誘導でき、店内外の状況を常に把握しやすくなります。新人スタッフでも簡単に操作できるため、教育コストも抑えられます。"}]
+      },
+      "customer": {
+        "title": "お客様の満足度とリピート率を向上",
+        "descriptions": [{"title": "待ち時間のストレスを解消", "value": "お客様はもう、お店の前でただ待つ必要はありません。順番が来るまで自由に時間を過ごせることで、待ち時間に対する不満が解消され、来店時の満足度が向上します。"}, {"title": "来店機会の創出", "value": "「並びたくない」という理由で入店を諦めていたお客様も、安心して来店できるようになります。これにより、潜在的な顧客層を取り込み、来店機会を増やすことができます。"}, {"title": "質の高い顧客体験を提供", "value": "待ち時間の快適さが、お店全体の印象アップに繋がり、お客様の再来店や口コミを促進します。"}]
+      }
+    },
+    "introduction": {
+      "title": "導入までの流れ",
+      "step1": {"title": "お申し込み", "description": "簡単な申込書作成でOK"},
+      "step2": {"title": "準備・設定", "description": "システムにお店情報を追加"},
+      "step3": {"title": "導入・運用開始", "description": "翌日からすぐに利用開始"}
+    },
+    "faq": {
+      "title": "よくある質問",
+      "item1": {"question": "Qパスの導入にはどれくらいの時間がかかりますか？", "answer": "お申し込みから運用開始まで、最短で翌日からご利用いただけます。"},
+      "item2": {"question": "導入にあたって特別な設備は必要ですか？", "answer": "特別な設備は不要で、スマートフォンやタブレットがあれば簡単に導入できます。"},
+      "item3": {"question": "導入後のサポートはありますか？", "answer": "はい、導入後も専任のサポートチームが対応いたしますので、ご安心ください。"},
+      "item4": {"question": "お店別にカスタマイズはできますか？", "answer": "はい、申し込みいただければ、お店別にカスタマイズ対応できます。"}
+    }
+  },
+  "services": {
+    "title": "Qパス",
+    "description": "呼び出しも管理もワンタッチ。順番待ちの新体験。",
+    "admin": {
+      "title": "管理者",
+      "card1": {"title": "モードを簡単に選べる！", "description": "waiting管理専用の端末、QRコード表示専用の端末のような制限はなく、タブレットやスマホなどどの端末でも簡単にモードを切り替えられます。"},
+      "card2": {"title": "複雑な設定なしで、QRコードの表示ができる！", "description": "QRコードの表示のために、複雑な設定は必要ありません。「QRコード表示」ボタンだけで表示できます。"},
+      "card3": {"title": "お客様の状態がわかりやすい！", "description": "入店済みのお客様、順番待ちのお客様で状態が別れているので、お客様の状態が一目でわかります。また、人数も表示されるので、より適切な対応ができるようになります。"},
+      "card4": {"title": "順番管理が簡単！", "description": "「入店」ボタンでお客様の入店ん処理が簡単、「呼出」ボタンでわざわざ呼びに行かなくても良い、「キャンセル」ボタンでお客様のキャンセル処理が簡単にできます。"},
+      "card5": {"title": "呼出もワンタッチで完了！", "description": "「呼出」ボタンを押下することにより、お客様の端末に通知が届きます。お客様は通知を受け取ることで、呼ばれたことを確認できるので、スタッフの業務が軽減されます。\nまた、「呼出済み」と表示が変わるため、お客様の状態をより把握しやすくなります。", "supportText": "※ 「呼出」押下後のお客様の画面は", "supportLink": "ここ"},
+      "card6": {"title": "退室処理も簡単！", "description": "お会計が済んだお客様の退室処理も簡単にできます。「退室」ボタンを押下することで、入店済みのお客様リストから消えるので、スタッフはお客様の状態をより正確に把握できるようになります。"}
+    },
+    "customer": {
+      "title": "お客様",
+      "card1": {"title": "必要な情報は人数だけ！", "description": "整理券の発券のために必要な情報は人数だけです。\n名前や電話番号などは必要なく、人数情報だけで気軽に発券が可能です。"},
+      "card2": {"title": "シンプルなUI！", "description": "お客様が使う画面は、シンプルなUIで構成されているため、誰でも不便なく操作できます。\n自分の順番が何番めなのか、またキャンセルもワンタッチで簡単にできます。"},
+      "card3": {"title": "自分がいつ入れるか予想できる", "description": "最近入店したお客様の情報をもとに、次に入店できる時間を予想できます。\nこれにより、お客様は自分の順番がいつになるかを予想できるので、安心して待つことができます。"},
+      "card4": {"title": "呼び出されたことがわかる", "description": "お客様の端末に通知が届くので、呼び出されたことがわかります。\n通知を受け取ることで、スタッフが呼びに行く手間を省くことができ、スタッフの業務が軽減されます。"}
+    }
+  },
+  "inquiry": {
+    "title": "問い合わせ",
+    "description": "ご意見・ご要望、バグ報告などはこちらへ",
+    "new": "新規作成",
+    "searchPlaceholder": "問い合わせを検索...",
+    "addDialog": {
+      "title": "新規問い合わせ",
+      "inquiryTitle": "タイトル",
+      "inquiryTitlePlaceholder": "タイトルを入力してください",
+      "inquiryContent": "内容",
+      "inquiryContentPlaceholder": "内容を入力してください"
+    },
+    "comments": {
+      "title": "コメント",
+      "addPlaceholder": "コメントを追加...",
+      "author": "(作成者)",
+      "edited": "(編集済み)",
+      "deleteConfirm": "このコメントを削除してもよろしいですか？",
+      "noComments": "コメントはまだありません。"
+    },
+    "detail": {
+      "status": "状態:",
+      "author": "作成者:",
+      "createdAt": "作成日:",
+      "lastUpdated": "最終更新日:",
+      "statusOpen": "オープン",
+      "statusClosed": "クローズ",
+      "statusPending": "保留中",
+      "statusResolved": "解決済み",
+      "closeInquiry": "問い合わせを閉じる",
+      "openInquiry": "問い合わせを開く"
+    },
+    "displayList": {
+      "noInquiries": "表示する問い合わせがありません。"
+    }
   }
 }
