--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -23,5 +23,113 @@
     "send": "전송",
     "close": "닫기",
     "back": "뒤로"
+  },
+  "index": {
+    "hero": {
+      "mainText1": "고객을 기다리게 하지 않는",
+      "mainText2": "실현.",
+      "subText1": "가게의 새로운 고객 경험을 창조",
+      "subText2": "하시겠습니까?"
+    },
+    "description": {
+      "card1": "고객을 부르러 가거나 줄을 정리하는 데 시간을 뺏기는 등, 가게 운영에는 보이지 않는 '대기 시간'에 관한 과제가 있습니다.",
+      "card2": "QR 코드 하나로 순번 발행부터 고객호출까지 완결되어, 고객도 직원도 스트레스 없이 지낼 수 있는 새로운 매장 경험을 실현합니다.",
+      "card3": "저희는 그런 가게 여러분을 위해, 고객의 '기다림'을 없애고, 보다 원활한 매장 운영을 지원하는 웹 서비스를 제공하고 있습니다."
+    },
+    "merit": {
+      "title": "'Q-Pass'를 도입함으로써 가게와 고객 양쪽 모두에게 기쁜 변화가 생깁니다.",
+      "staff": {
+        "title": "직원 부담 대폭 경감",
+        "descriptions": [{"title": "업무 효율 향상", "value": "고객 호출은 버튼 하나로 완료. 직원이 일일이 부르러 가거나 줄 정리에 매달릴 필요가 없어집니다. 그만큼 본래의 접객이나 조리, 상품 준비 등 매출과 직결되는 업무에 집중할 수 있습니다."},
+          {"title": "원활한 운영", "value": "혼잡 시에도 혼란 없이 고객을 안내할 수 있으며, 매장 안팎의 상황을 항상 파악하기 쉬워집니다. 신입 직원도 쉽게 조작할 수 있어 교육 비용도 절감됩니다."}
+        ]
+      },
+      "customer": {
+        "title": "고객 만족도 및 재방문율 향상",
+        "descriptions": [{"title": "대기 시간 스트레스 해소", "value": "고객은 더 이상 가게 앞에서 그냥 기다릴 필요가 없습니다. 순서가 올 때까지 자유롭게 시간을 보낼 수 있게 되어, 대기 시간에 대한 불만이 해소되고 방문 시 만족도가 향상됩니다."},
+          {"title": "방문 기회 창출", "value": "'줄 서기 싫다'는 이유로 입점을 포기했던 고객도 안심하고 방문할 수 있게 됩니다. 이를 통해 잠재 고객층을 확보하고 방문 기회를 늘릴 수 있습니다."},
+          {"title": "수준 높은 고객 경험 제공", "value": "대기 시간의 쾌적함이 가게 전체의 인상 상승으로 이어져, 고객의 재방문이나 입소문을 촉진합니다."}
+        ]
+      }
+    },
+    "introduction": {
+      "title": "도입까지의 흐름",
+      "step1": {"title": "신청", "description": "간단한 신청서 작성으로 OK"},
+      "step2": {"title": "준비·설정", "description": "시스템에 가게 정보 추가"},
+      "step3": {"title": "도입·운용 개시", "description": "다음 날부터 바로 이용 시작"}
+    },
+    "faq": {
+      "title": "자주 묻는 질문",
+      "item1": {"question": "Q-Pass 도입에는 얼마나 시간이 걸리나요?", "answer": "신청부터 운용 개시까지, 최단 다음 날부터 이용하실 수 있습니다."},
+      "item2": {"question": "도입에 특별한 설비가 필요한가요?", "answer": "특별한 설비는 필요 없으며, 스마트폰이나 태블릿이 있으면 간단하게 도입할 수 있습니다."},
+      "item3": {"question": "도입 후 지원이 있나요?", "answer": "네, 도입 후에도 전담 지원팀이 대응하므로 안심하십시오."},
+      "item4": {"question": "가게별로 커스터마이징이 가능한가요?", "answer": "네, 신청하시면 가게별로 커스터마이징 대응이 가능합니다."}
+    }
+  },
+  "services": {
+    "title": "Q-패스",
+    "description": "호출도 관리도 원터치. 순서 대기의 새로운 경험.",
+    "admin": {
+      "title": "관리자",
+      "card1": {"title": "모드를 쉽게 선택!", "description": "대기 관리 전용 단말기, QR 코드 표시 전용 단말기와 같은 제한 없이 태블릿이나 스마트폰 등 모든 기기에서 쉽게 모드를 전환할 수 있습니다."
+      },
+      "card2": {"title": "복잡한 설정 없이 QR 코드 표시 가능!", "description": "QR 코드를 표시하기 위해 복잡한 설정이 필요 없습니다. 'QR 코드 표시' 버튼만으로 표시할 수 있습니다."
+      },
+      "card3": {"title": "고객 상태를 알기 쉽게!", "description": "입점한 고객과 대기 중인 고객의 상태가 구분되어 있어 고객의 상태를 한눈에 알 수 있습니다. 또한 인원수도 표시되어 더 적절한 대응이 가능합니다."
+      },
+      "card4": {"title": "순서 관리가 간단!", "description": "'입점' 버튼으로 고객 입점 처리가 간단하고, '호출' 버튼으로 일부러 부르러 가지 않아도 되며, '취소' 버튼으로 고객 취소 처리가 간단합니다."
+      },
+      "card5": {"title": "호출도 원터치로 완료!", "description": "'호출' 버튼을 누르면 고객의 단말기로 알림이 전송됩니다. 고객은 알림을 받아 호출된 것을 확인할 수 있어 직원의 업무가 줄어듭니다.\n또한 '호출됨'으로 표시가 바뀌어 고객의 상태를 더 쉽게 파악할 수 있습니다.", "supportText": "※ '호출'을 누른 후의 고객 화면은", "supportLink": "여기"
+      },
+      "card6": {"title": "퇴실 처리도 간단!", "description": "결제를 마친 고객의 퇴실 처리도 간단하게 할 수 있습니다. '퇴실' 버튼을 누르면 입점한 고객 목록에서 사라져 직원은 고객의 상태를 더 정확하게 파악할 수 있습니다."
+      }
+    },
+    "customer": {
+      "title": "고객",
+      "card1": {"title": "필요한 정보는 인원수뿐!", "description": "정리권을 발급받기 위해 필요한 정보는 인원수뿐입니다.\n이름이나 전화번호 등은 필요 없으며, 인원수 정보만으로 간편하게 발급받을 수 있습니다."
+      },
+      "card2": {"title": "간단한 UI!", "description": "고객이 사용하는 화면은 간단한 UI로 구성되어 있어 누구나 불편 없이 조작할 수 있습니다.\n자신의 순서가 몇 번째인지, 또한 취소도 원터치로 간단하게 할 수 있습니다."
+      },
+      "card3": {"title": "언제 들어갈 수 있는지 예측 가능", "description": "최근에 입점한 고객의 정보를 바탕으로 다음에 입점할 수 있는 시간을 예측할 수 있습니다.\n이를 통해 고객은 자신의 순서가 언제가 될지 예측할 수 있어 안심하고 기다릴 수 있습니다."
+      },
+      "card4": {"title": "호출된 것을 알 수 있음", "description": "고객의 단말기로 알림이 전송되므로 호출된 것을 알 수 있습니다.\n알림을 받음으로써 직원이 부르러 가는 수고를 덜 수 있어 직원의 업무가 줄어듭니다."
+      }
+    }
+  },
+  "inquiry": {
+    "title": "문의",
+    "description": "의견, 요청, 버그 보고 등은 이쪽으로 부탁드립니다.",
+    "new": "새로 만들기",
+    "searchPlaceholder": "문의 검색...",
+    "addDialog": {
+      "title": "새 문의",
+      "inquiryTitle": "제목",
+      "inquiryTitlePlaceholder": "제목을 입력하세요",
+      "inquiryContent": "내용",
+      "inquiryContentPlaceholder": "내용을 입력하세요"
+    },
+    "comments": {
+      "title": "댓글",
+      "addPlaceholder": "댓글 추가...",
+      "author": "(작성자)",
+      "edited": "(편집됨)",
+      "deleteConfirm": "이 댓글을 삭제하시겠습니까?",
+      "noComments": "댓글이 아직 없습니다."
+    },
+    "detail": {
+      "status": "상태:",
+      "author": "작성자:",
+      "createdAt": "작성일:",
+      "lastUpdated": "최종 수정일:",
+      "statusOpen": "오픈",
+      "statusClosed": "종료",
+      "statusPending": "보류 중",
+      "statusResolved": "해결됨",
+      "closeInquiry": "문의 종료",
+      "openInquiry": "문의 열기"
+    },
+    "displayList": {
+      "noInquiries": "표시할 문의가 없습니다."
+    }
   }
 }
