--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -112,7 +112,7 @@
     "comments": {
       "title": "댓글",
       "addPlaceholder": "댓글 추가...",
-      "author": "(작성자)",
+      "author": "작성자",
       "edited": "(편집됨)",
       "deleteConfirm": "이 댓글을 삭제하시겠습니까?",
       "noComments": "댓글이 아직 없습니다."
@@ -131,6 +131,68 @@
     },
     "displayList": {
       "noInquiries": "표시할 문의가 없습니다."
+    }
+  },
+  "dashboard": {
+    "admin": {
+      "enteredCustomers": "입장한 고객",
+      "waitingCustomers": "대기 중인 고객",
+      "noEnteredCustomers": "현재 입장한 고객이 없습니다.",
+      "noWaitingCustomers": "현재 대기 중인 고객이 없습니다.",
+      "entryNumber": "No. {entry_number}",
+      "visitorCount": "{visitor_count}명",
+      "enteredAt": "입장: {entered_at}",
+      "exit": "퇴장",
+      "enter": "입장",
+      "called": "호출됨",
+      "call": "호출",
+      "cancel": "취소",
+      "confirmExit": "No.{entry_number}를 정말로 퇴장 처리하시겠습니까?",
+      "confirmEnter": "No.{entry_number}를 정말로 입장 처리하시겠습니까?",
+      "confirmCancel": "No.{entry_number}를 정말로 취소하시겠습니까?",
+      "confirmCall": "No.{entry_number}를 정말로 호출하시겠습니까?",
+      "fetchWaitingError": "대기 중인 고객 정보를 가져오는데 실패했습니다.",
+      "fetchEnteredError": "입장한 고객 정보를 가져오는데 실패했습니다."
+    },
+    "canceled": {
+      "message": "취소되었습니다. 다시 방문해주세요."
+    },
+    "modeSelect": {
+      "title": "어떤 모드로 이용하시겠습니까?",
+      "waitingManagement": "대기 관리",
+      "waitingManagementDesc": "고객의 대기 상황을 실시간으로 관리합니다.",
+      "qrCodeDisplay": "QR 코드 표시",
+      "qrCodeDisplayDesc": "고객이 대기 등록을 위한 QR 코드를 표시합니다."
+    },
+    "qrCodeDisplay": {
+      "title": "대기 등록용 QR 코드",
+      "step1": "1. 위의 QR 코드를 스마트폰으로 스캔해주세요.",
+      "step2": "2. 표시된 페이지에서 인원수를 입력하고 등록 버튼을 눌러주세요.",
+      "step3": "3. 입장 준비가 되면 알림 메시지를 보내드립니다."
+    },
+    "createEntry": {
+      "welcome": "{shopName}에 오신 것을 환영합니다!",
+      "instruction": "인원수를 입력한 후\n전송 버튼을 눌러주세요.",
+      "visitorCount": "인원수:",
+      "submit": "전송",
+      "unexpectedError": "예기치 않은 오류가 발생했습니다."
+    },
+    "customer": {
+      "ticketNumber": "대기 번호",
+      "ticketNumberSuffix": "번",
+      "calledMessageHeader": "기다려 주셔서 감사합니다.",
+      "calledMessageBody": "자리가 준비되었으니 들어오세요.",
+      "waitingCount": "대기 인원: {count}팀",
+      "recentEntries": "최근 입장",
+      "cancelWaiting": "대기 취소",
+      "cancelling": "취소 중...",
+      "fetchTicketFailed": "대기 번호표를 받지 못했습니다.",
+      "scanAgain": "QR 코드를 다시 스캔해주세요.",
+      "cancelSuccess": "대기가 취소되었습니다.",
+      "cancelError": "entryId를 가져올 수 없습니다.",
+      "recentEntriesError": "최근 입장 정보 가져오기 오류:",
+      "waitingCountError": "대기 인원 수 가져오기 오류:",
+      "entryDetailsError": "입장 상세 정보 가져오기 오류:"
     }
   }
 }
