--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -47,7 +47,8 @@
       },
       "customer": {
         "title": "고객 만족도 및 재방문율 향상",
-        "descriptions": [{"title": "대기 시간 스트레스 해소", "value": "고객은 더 이상 가게 앞에서 그냥 기다릴 필요가 없습니다. 순서가 올 때까지 자유롭게 시간을 보낼 수 있게 되어, 대기 시간에 대한 불만이 해소되고 방문 시 만족도가 향상됩니다."},
+        "descriptions": [
+          {"title": "대기 시간 스트레스 해소", "value": "고객은 더 이상 가게 앞에서 그냥 기다릴 필요가 없습니다. 순서가 올 때까지 자유롭게 시간을 보낼 수 있게 되어, 대기 시간에 대한 불만이 해소되고 방문 시 만족도가 향상됩니다."},
           {"title": "방문 기회 창출", "value": "'줄 서기 싫다'는 이유로 입점을 포기했던 고객도 안심하고 방문할 수 있게 됩니다. 이를 통해 잠재 고객층을 확보하고 방문 기회를 늘릴 수 있습니다."},
           {"title": "수준 높은 고객 경험 제공", "value": "대기 시간의 쾌적함이 가게 전체의 인상 상승으로 이어져, 고객의 재방문이나 입소문을 촉진합니다."}
         ]
@@ -194,5 +195,36 @@
       "waitingCountError": "대기 인원 수 가져오기 오류:",
       "entryDetailsError": "입장 상세 정보 가져오기 오류:"
     }
+  },
+  "logout": {
+    "title": "로그아웃",
+    "message": "정말로 로그아웃하시겠습니까?",
+    "button": "로그아웃",
+    "confirm": "정말로 로그아웃하시겠습니까?"
+  },
+  "signup": {
+    "title": "신규 등록",
+    "email": "이메일",
+    "shopName": "가게 이름",
+    "password": "비밀번호",
+    "button": "신규 등록",
+    "success": "회원가입이 완료되었습니다."
+  },
+  "login": {
+    "title": "로그인",
+    "email": "이메일",
+    "password": "비밀번호",
+    "forgotPassword": "비밀번호를 잊으셨나요?",
+    "button": "로그인",
+    "error": {
+      "noUserInfo": "사용자 정보를 가져올 수 없습니다.",
+      "fetchError": "사용자 데이터를 가져오는 중 오류가 발생했습니다."
+    }
+  },
+  "sendMailUpdatePw": {
+    "title": "메일 전송",
+    "description": "※ 입력한 이메일 주소로 비밀번호 변경 링크를 보내드립니다.\n등록되지 않은 이메일 주소를 입력한 경우에는 전송되지 않습니다.",
+    "email": "이메일",
+    "button": "전송"
   }
 }
