--- a/i18n/locales/ko.json
+++ b/i18n/locales/ko.json
@@ -229,5 +229,40 @@
     "description": "※ 입력한 이메일 주소로 비밀번호 변경 링크를 보내드립니다.\n등록되지 않은 이메일 주소를 입력한 경우에는 전송되지 않습니다.",
     "email": "이메일",
     "button": "전송"
+  },
+  "server": {
+    "error": {
+      "unexpected": "예기치 않은 오류가 발생했습니다.\n점원에게 문의해주세요.",
+      "fetchWaitingListFailed": "대기 목록을 가져오지 못했습니다.",
+      "callFailed": "호출 처리에 실패했습니다.",
+      "cancelFailed": "취소 처리에 실패했습니다.\n점원에게 문의해주세요.",
+      "fetchEntryInfoFailed": "입장 정보를 가져오지 못했습니다.",
+      "callBeforeEntry": "입장 처리 전에 호출을 먼저 실행해주세요.",
+      "enterFailed": "입장 처리에 실패했습니다.",
+      "exitFailed": "퇴장 처리에 실패했습니다.",
+      "fetchEntryDetailFailed": "입장 상세 정보를 가져오지 못했습니다.\n점원에게 문의해주세요.",
+      "fetchCallInfoFailed": "호출 정보를 가져오지 못했습니다.\n점원에게 문의해주세요.",
+      "fetchRecentEntriesFailed": "최근 입장 정보를 가져오지 못했습니다.\n점원에게 문의해주세요.",
+      "fetchWaitingCountFailed": "대기 팀 수를 가져오지 못했습니다.\n점원에게 문의해주세요.",
+      "forgotPasswordFailed": "비밀번호 재설정 처리에 실패했습니다.",
+      "updatePasswordFailed": "비밀번호 업데이트 처리에 실패했습니다.",
+      "passwordsDoNotMatch": "비밀번호가 일치하지 않습니다.",
+      "noUserFound": "사용자를 찾을 수 없습니다.",
+      "fetchUserFailed": "사용자 정보를 가져오지 못했습니다.",
+      "fetchShopFailed": "가게 정보를 가져오지 못했습니다.",
+      "addInquiryFailed": "문의 추가에 실패했습니다.",
+      "fetchInquiryListFailed": "문의 목록을 가져오지 못했습니다.",
+      "fetchCommentFailed": "문의 댓글을 가져오지 못했습니다.",
+      "deleteCommentFailed": "댓글 삭제에 실패했습니다.",
+      "editCommentFailed": "댓글 수정에 실패했습니다.",
+      "addCommentFailed": "댓글 추가에 실패했습니다.",
+      "fetchInquiryDetailFailed": "문의 상세 정보를 가져오지 못했습니다.",
+      "updateInquiryFailed": "문의 업데이트에 실패했습니다.",
+      "visitorCountMissing": "인원수가 지정되지 않았습니다.",
+      "visitorCountInvalid": "인원수 값이 잘못되었습니다. 1에서 30 사이의 정수를 지정해주세요.",
+      "fetchTicketNumberFailed": "대기 번호를 가져오지 못했습니다.\n점원에게 문의해주세요.",
+      "updateTicketNumberFailed": "대기 번호 업데이트에 실패했습니다.\n점원에게 문의해주세요.",
+      "issueTicketNumberFailed": "대기 번호 발급에 실패했습니다.\n점원에게 문의해주세요."
+    }
   }
 }
